--- a/demo/src/main/resources/config/application.properties
+++ b/demo/src/main/resources/config/application.properties
@@ -1,20 +1,44 @@
 server.port=443
-#=== default:80     ssl:443 ===
+http.port=80
+#===default:80ssl:443===
+#netstat-anotaskkill/pid4220-f
 
 
-# === more environmrnt ===
-# === have to new a application-dev.properties like application-{profile}.properties ===
-# === spring.profiles.active=dev ===
-# will point to dev_log
-# logging.config=classpath:config/logback-dev.xml
+#===moreenvironmrnt===
+#===havetonewaapplication-dev.propertieslikeapplication-{profile}.properties===
+#===spring.profiles.active=dev===
+#willpointtodev_log
+#logging.config=classpath:config/logback-dev.xml
 
-# === hot set if change will alert ===
-# spring.devtools.restart.enabled=true
-# spring.devtools.restart.additional-paths=src/main/java
+#===hotsetifchangewillalert===
+#spring.devtools.restart.enabled=true
+#spring.devtools.restart.additional-paths=src/main/java
 
-# === ssl cmd:keytool -genkey -alias tomcat -keyalg RSA ===
+#===sslcmd:keytool-genkey-aliastomcat-keyalgRSA===
 server.ssl.key-store=classpath:.keystore
 server.ssl.key-password=000000
+
+#===databaseconnection====
+#===mysql
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysq1://127.0.0.1:3306/chinamap?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/chinamap
+spring.datasource.username=root
+spring.datasource.password=123456
+
+#===hakaripool
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=180000
+spring.datasource.hikari.auto-commit=true
+
+#===mybatis
+mybatis.configuration.map-underscore-to-camel-case=true
+
+
+#===aimatmapper.xml===
+mybatis.type-aliases-package=com.example.demo.modules.*.entity
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
 name=Azhu
 age=18
