"2020-5-9 user role resource增删改查"

--- a/demo/src/main/resources/config/application.properties
+++ b/demo/src/main/resources/config/application.properties
@@ -40,6 +40,19 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.example.demo.modules.*.entity
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
+#===jpa===
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+#===thymeleaf===
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+
 name=Azhu
 age=18
 desc=unKnown
